@@ -42,7 +42,7 @@ public class QTConstants {
     // Application
     //----------------------------------------------------------------------------
     
-    public static final FrameSetup FRAME_SETUP = new FrameSetup.CenteredWithSize( 1024, 768 );
+    public static final String PROJECT_NAME = "quantum-tunneling";
     
     //----------------------------------------------------------------------------
     // Clock
